--- a/style.css
+++ b/style.css
@@ -57,20 +57,58 @@ nav {
   padding-left: 40px;
   padding-right: 40px;
   width: 100%;
-  height: 80px;
+  height: 100px;
   border-bottom: solid 1px rgba(183, 183, 183, 0.5294117647);
 }
 nav .nav-logo {
-  font-size: 29px;
+  font-size: 36px;
   font-weight: 500;
+  cursor: pointer;
+  -webkit-transition: color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
+}
+nav .nav-logo:hover {
+  color: #2eb4ea;
 }
 nav .nav-menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 16px;
-  font-size: 21px;
+  gap: 25px;
+  font-size: 26px;
 }
 nav .nav-search {
   font-size: 35px;
+  cursor: pointer;
+}
+
+main {
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-top: 30px;
+}
+main .enter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 200px;
+  margin-bottom: 100px;
+}
+main .enter-text h1 {
+  font-weight: 500;
+  font-size: 40px;
+}
+main .enter-text h1 span {
+  font-weight: normal;
+  font-size: 36px;
+}
+main .enter-text p {
+  font-size: 26px;
+  padding-top: 25px;
+}
+main .enter-img {
+  border-radius: 10px;
 }
