--- a/style.scss
+++ b/style.scss
@@ -1,69 +1,57 @@
-//font
-@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
-
-// reset css
-html {
-  box-sizing: border-box;
-  font-size: 16px;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ol,
-ul {
-  margin: 0;
-  padding: 0;
-  font-weight: normal;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-body {
-  font-family: "Rubik", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
+@import "settings.scss";
+@import "mixin.scss";
 
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 40px;
-  padding-right: 40px;
+  @include paddingX(40px);
   width: 100%;
-  height: 80px;
+  height: 100px;
   border-bottom: solid 1px #b7b7b787;
   .nav-logo {
-    font-size: 29px;
+    font-size: 36px;
     font-weight: 500;
+    cursor: pointer;
+    transition: color 0.3s ease-in-out;
+    &:hover {
+      color: #2eb4ea;
+    }
   }
   .nav-menu {
     display: flex;
-    gap: 16px;
-    font-size: 21px;
+    gap: 25px;
+    font-size: 26px;
   }
   .nav-search {
     font-size: 35px;
+    cursor: pointer;
+  }
+}
+main {
+  @include paddingX(40px);
+  margin-top: 30px;
+  .enter {
+    display: flex;
+    justify-content: space-between;
+    gap: 200px;
+    margin-bottom: 100px;
+    &-text {
+      h1 {
+        font-weight: 500;
+        font-size: 40px;
+        span {
+          font-weight: normal;
+          font-size: 36px;
+        }
+      }
+      p {
+        font-size: 26px;
+        padding-top: 25px;
+      }
+    }
+    &-img {
+      border-radius: 10px;
+    }
   }
 }
