--- a/settings.scss
+++ b/settings.scss
@@ -44,3 +44,15 @@ body {
   font-weight: 400;
   font-style: normal;
 }
+
+h2,
+h3 {
+  text-align: center;
+  font-weight: 500;
+}
+h2 {
+  font-size: 36px;
+}
+h3 {
+  font-size: 32px;
+}
