--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,12 @@
 @import "settings.scss";
 @import "mixin.scss";
 
+// nav
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background: #fff;
   @include paddingX(40px);
   width: 100%;
   height: 100px;
@@ -22,15 +24,26 @@ nav {
     display: flex;
     gap: 25px;
     font-size: 26px;
+    &-element {
+      cursor: pointer;
+      transition: 0.3s color ease-in-out;
+      &:hover {
+        color: #2eb4ea;
+      }
+    }
   }
   .nav-search {
     font-size: 35px;
     cursor: pointer;
   }
 }
+
+// main
 main {
   @include paddingX(40px);
   margin-top: 30px;
+
+  // enter
   .enter {
     display: flex;
     justify-content: space-between;
@@ -52,6 +65,17 @@ main {
     }
     &-img {
       border-radius: 10px;
+    }
+  }
+
+  // biography
+  .biography {
+    &-education {
+      @include biographySection();
+      margin-top: 10px;
+    }
+    &-family {
+      @include biographySection();
     }
   }
 }
