--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,46 @@ nav {
     display: flex;
     gap: 25px;
     font-size: 26px;
+    &-block {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .nav-menu-hint {
+        position: absolute;
+        margin-top: 40px;
+        width: 124px;
+        height: 55px;
+        background-color: #fff;
+        transition: opacity 0.3s ease-in-out;
+        border-radius: 3px;
+        box-shadow: 0 2px 20px 2px #2f7aeb50; /* добавляем тень */
+        &::before {
+          content: "";
+          position: absolute;
+          top: -19px;
+          left: calc(50% - 10px);
+          border-width: 10px;
+
+          // width: 124px;
+          border-style: solid;
+          border-color: transparent transparent #fff transparent;
+        }
+        ul {
+          margin: 0;
+          padding-left: 30px;
+          font-size: 20px;
+          margin-top: 2px;
+          li {
+            cursor: pointer;
+            user-select: none;
+            transition: color 0.3s ease-in-out;
+            &:hover {
+              color: #2eb4ea;
+            }
+          }
+        }
+      }
+    }
     &-element {
       cursor: pointer;
       transition: 0.3s color ease-in-out;
