--- a/src/styles/gloabl.css
+++ b/src/styles/gloabl.css
@@ -1,16 +1,15 @@
-//font
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
-
-// reset css
 html {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-size: 16px;
 }
 
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 body,
@@ -43,9 +42,15 @@ h3 {
   text-align: center;
   font-weight: 500;
 }
+
 h2 {
   font-size: 36px;
 }
+
 h3 {
   font-size: 32px;
+}
+
+p {
+  font-size: 26px;
 }
