--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -17,7 +17,7 @@
       display: flex;
       flex-direction: column;
       gap: 30px;
-      font-size: 26px;
+      // font-size: 26px;
     }
   }
   @content;
