--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -52,6 +52,10 @@ h3 {
   font-size: 32px;
 }
 
+p {
+  font-size: 26px;
+}
+
 nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -206,7 +210,6 @@ main .biography-education-data-text {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 30px;
-  font-size: 26px;
 }
 main .biography-family {
   margin-bottom: 30px;
@@ -233,5 +236,57 @@ main .biography-family-data-text {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 30px;
+}
+main .inventions {
+  margin-bottom: 100px;
+}
+main .inventions-data {
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+main .inventions-data-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+  width: 70%;
+}
+main .inventions-data-img {
+  width: 370px;
+  height: 402px;
+  background-color: #f0f0f0;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+main .inventions-data-img span {
+  text-align: center;
+  margin-top: 10px;
   font-size: 26px;
+  font-style: italic;
+}
+main .inventions-data-img img {
+  border-radius: 10px;
+  width: 279px;
+  height: 256px;
+  margin-top: 20px;
 }
