--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,4 @@
-@import "settings.scss";
+@import "global.scss";
 @import "mixin.scss";
 
 // nav
@@ -116,6 +116,43 @@ main {
     }
     &-family {
       @include biographySection();
+    }
+  }
+  .inventions {
+    margin-bottom: 100px;
+    &-data {
+      margin-top: 30px;
+      display: flex;
+      gap: 20px;
+      flex-direction: column;
+      &-text {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        width: 70%;
+      }
+      &-img {
+        width: 370px;
+        height: 402px;
+        background-color: #f0f0f0;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+
+        span {
+          text-align: center;
+          margin-top: 10px;
+          font-size: 26px;
+          font-style: italic;
+        }
+        img {
+          border-radius: 10px;
+          width: 279px;
+          height: 256px;
+          margin-top: 20px;
+        }
+      }
     }
   }
 }
