--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -54,3 +54,9 @@ h3 {
 p {
   font-size: 26px;
 }
+.highlight {
+  background-color: yellow;
+}
+.selectedHighlight {
+  background-color: orange;
+}
