--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,7 +9,6 @@
 // nav
 nav {
   display: flex;
-  // justify-content: space-between;
   align-items: center;
   background: #fff;
   @include paddingX(40px);
@@ -42,7 +41,7 @@ nav {
         background-color: #fff;
         transition: opacity 0.3s ease-in-out;
         border-radius: 3px;
-        box-shadow: 0 2px 20px 2px #2f7aeb50; /* добавляем тень */
+        box-shadow: 0 2px 20px 2px #2f7aeb50;
         &::before {
           content: "";
           position: absolute;
@@ -50,7 +49,6 @@ nav {
           left: calc(50% - 10px);
           border-width: 10px;
 
-          // width: 124px;
           border-style: solid;
           border-color: transparent transparent #fff transparent;
         }
@@ -138,7 +136,6 @@ nav {
 .up-btn {
   width: $upBtnSize;
   height: $upBtnSize;
-  // position: absolute;
   right: 50px;
   position: fixed;
   bottom: 50px;
